changed button alignment to prevent mouseover issue

--- a/src/styles/less/ads-less/visualizations.less
+++ b/src/styles/less/ads-less/visualizations.less
@@ -382,9 +382,16 @@ Year, Citation and Reference Graphs
 
 }
 
+.s-update-all {
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
 .s-zoom-panel {
-  width: 7%;
-  padding-left : 50%;
+  position: absolute;
+  right: 5px;
+  width: 40px;
+  top: 5px;
 }
 
 #zoom-in {
